[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DCLG"
version = "0.0.1"
authors = [
  { name="icml-workshop", email="icml.workshop@gmail.com" },
]
description = "Dilated convolution with learnable gaussians, built on PyTorch."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/icml-workshop/Dilated-Convolution-with-Learnable-Gaussians-PyTorch"
"Bug Tracker" = "https://github.com/icml-workshop/Dilated-Convolution-with-Learnable-Gaussians-PyTorch/issues"
